<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
android:id="@+id/sheet_dialog"
    android:layout_height="wrap_content">
    <View
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_7sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/delete_indicator_shape"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/sheet_dialog_message"
        android:fontFamily="@font/product_sans_regular"
        />
    <TextView
        android:id="@+id/delete_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/sheet_dialog_no"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/delete_no_shape"
        android:fontFamily="@font/product_sans_regular"
        />
    <TextView
        android:id="@+id/delete_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/sheet_dialog_yes"
        android:textColor="@color/white"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/delete_yes_shape"
        android:fontFamily="@font/product_sans_regular"
        />

</LinearLayout>