<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.AddNewNodeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="@dimen/_15sdp"
                android:inputType="text"
                android:background="@drawable/edit_text_background"
                android:hint="@string/hintEditTextTitle"
                android:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp" />

            <EditText
                android:id="@+id/editTextSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="@dimen/_15sdp"
                android:inputType="text"
                android:hint="@string/hintEditTextSubTitle"
                android:background="@drawable/edit_text_background"

                android:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"

                    android:text="@string/PriorityTextview" />

                <ImageView
                    android:id="@+id/Priority_yellow"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/yellow_shape"
                    android:src="@drawable/shape_done" />

                <ImageView
                    android:id="@+id/Priority_green"

                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/green_shape"


                    />

                <ImageView
                    android:id="@+id/Priority_red"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/red_shape"


                    />


            </LinearLayout>

            <EditText
                android:id="@+id/editTextNote"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:ems="10"
                android:padding="@dimen/_15sdp"
                android:gravity="start"
                android:inputType="text"
                android:hint="@string/hintEditTextNote"
                android:background="@drawable/edit_text_background"
                android:fontFamily="@font/product_sans_regular"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp" />


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddNewNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_15sdp"

            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:backgroundTint="@color/red"
            android:clickable="true"
            app:srcCompat="@drawable/baseline_done_24" />
    </RelativeLayout>
</layout>